# Chicken-disease-Classification-Project

./: .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  render.yaml  requirements.txt  setup.py  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  03_prepare_callback.ipynb  04_training.ipynb  05_model_evaluation.ipynb  trials.ipynb
research/logs/: 02_prepare_base_model.ipynb
src/cnnclassifier/: __init__.py
src/cnnclassifier/components/: data_ingestion.py  model_evaluation.py  prepare_base_model.py  prepare_callbacks.py  training.py
src/cnnclassifier/config/: configuration.py
src/cnnclassifier/constants/: __init__.py
src/cnnclassifier/entity/: config_entity.py
src/cnnclassifier/pipeline/: predict.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_model_evaluation.py
src/cnnclassifier/utils/: common.py
templates/: Dockerfile  index.html
