[project]
name = "chicken-disease-classification-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Francis Royce",email = "francisroyce12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
