[project]
name = "chicken-disease-classification-project"
version = "0.1.0"
description = "A deep learning project to classify chicken diseases."
authors = [
    {name = "Francis Royce", email = "francisroyce12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1,<4.0.0"
]

[tool.poetry]
packages = [
    { include = "cnnClassifier", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
